--- a/src/pages/books/Books.css
+++ b/src/pages/books/Books.css
@@ -25,4 +25,17 @@
     margin-top: 10px !important;
   box-shadow: 1px 2px 8px 3px rgba(0, 0, 0, 0.3) !important;
 }
+.modalBox{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 500ms !important;
+    width: auto;
+    box-shadow: 24px;
+    padding: 3rem;
+    border-radius: 8px;
+    text-align: center;
+    background-color: #ffffff;
+}
 
